# wasmcompute.com

./: Cargo.toml  README.md  index.html  wasmcompute.yaml
css/: main.css
documents/: README.md  todo.md
documents/design/: README.md  cli.md  dependancies.md  library.md  projecfile.md  projectfile.md  wasmcore.md  web_server.md
documents/examples/: README.md  docs.md  pastebin.md  url_shortener.md
documents/uml/: request.plantuml
src/: main.rs
static/: main.css
templates/: 404.html  template.html
