[package]
name = "docs"
version = "0.1.0"
authors = ["Alec Di Vito <divito.alec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.8"
wasmcompute-lib = { path = "/Users/divitoa/Documents/RUST/wasmcompute-redis"}